Go Travis and Coverity Scan

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 
 # Fortran module files
 *.mod
-*.smod
 
 # Compiled Static libraries
 *.lai
@@ -27,3 +26,10 @@
 *.exe
 *.out
 *.app
+*.gcda
+Makefile
+*.gcov
+*.gcda
+*.gcno
+*.pro.user
+travis_qmake_gcc_cpp14
