--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,10 @@ addons:
   coverity_scan:
     project:
       name: "richelbilderbeek/travis_qmake_gcc_cpp14_coverity"
+      description: "Testing out Coverity Scan"
     notification_email: richel@richelbilderbeek.nl
-    build_command_prepend: 
-      cov-configure --comptype gcc --compiler gcc-5
-      qmake
-    build_command: make
+    build_command_prepend: "cov-configure --comptype gcc --compiler gcc-5; qmake"
+    build_command: "make"
     branch_pattern: coverity_scan
 
 after_success:
