Use g++-5 on Coverity Scan

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ addons:
       name: "richelbilderbeek/travis_qmake_gcc_cpp14_coverity"
       description: "Testing out Coverity Scan"
     notification_email: richel@richelbilderbeek.nl
-    build_command_prepend: "cov-configure --comptype gcc --compiler gcc-5; qmake"
+    build_command_prepend: "cov-configure --comptype gcc --compiler g++-5; qmake"
     build_command: "make"
     branch_pattern: coverity_scan
 
