--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_install:
 install: 
   # C++14
   - sudo apt-get install -qq g++-5
+  # g++ should call g++-5
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
 
 before_script: 
   - qmake
@@ -33,7 +35,7 @@ addons:
       name: "richelbilderbeek/travis_qmake_gcc_cpp14_coverity"
       description: "Testing out Coverity Scan"
     notification_email: richel@richelbilderbeek.nl
-    build_command_prepend: "make clean; cov-configure --comptype gcc --compiler g++-5; qmake"
+    build_command_prepend: "qmake"
     build_command: "make"
     branch_pattern: coverity_scan
 
