--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ addons:
       name: "richelbilderbeek/travis_qmake_gcc_cpp14_coverity"
       description: "Testing out Coverity Scan"
     notification_email: richel@richelbilderbeek.nl
-    build_command_prepend: "qmake"
+    build_command_prepend: "make clean; qmake"
     build_command: "make"
     branch_pattern: coverity_scan
 
